# fan-control

./: .env.example  .gitignore  PHYSICS_MODEL.md  README.md  config.yaml  dvc.yaml  params.yaml  pyproject.toml
data/: .gitignore  raw.dvc
docs/: IDEAS.md
eda/: ml_evaluation.py  model_comparison.py
src/fan_control/: __init__.py  cli.py  data.py  data_collector.py  hardware.py  load.py  plotting.py  safety.py
src/fan_control/collect/: cli.py  collector.py  models.py  plotting.py
src/fan_control/control/: __init__.py  cli.py  controller.py  cool.py  optimizer.py  validate.py
src/fan_control/core/: __init__.py  hardware.py  simulator.py  train.py  utils.py
src/fan_control/fit/: __init__.py  cli.py  equations.py  fitter.py  plotting.py  train.py  validator.py
src/fan_control/models/: __init__.py  base.py  gbr.py  gp.py  physics.py  pinn.py
src/fan_control/pipeline/: __init__.py  evaluate.py  preprocess.py  simulate.py  train.py
src/fan_control/plot/: __init__.py  cli.py  plotting.py
src/fan_control/simulate/: __init__.py  cli.py  simulator.py
src/fan_control/train/: __init__.py  cli.py
src/fan_control/validate/: __init__.py  cli.py  simulator.py
tools/: gpu_load.py
